problem in contactUs, AboutUs, Index, and comingSoon pages are fixed

--- a/ComingSoon.html
+++ b/ComingSoon.html
@@ -168,7 +168,7 @@
                               ><span class="nav-dropdowm-link-line"> </span>Work
                               Process</a
                             ><a
-                              href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                              href="ComingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Why
@@ -187,6 +187,15 @@
                               ><span class="nav-dropdowm-link-line"> </span
                               >Clients</a
                             >
+                            
+                            <a
+                              href="Contact Us.html"
+                              class="nav-dropdown-link-item w-dropdown-link"
+                              tabindex="0"
+                              ><span class="nav-dropdowm-link-line"> </span
+                              >Contact Us</a
+                            >
+
                           </div>
                         </nav>
                       </div>
@@ -231,25 +240,25 @@
                         >
                           <div class="nav-dropdown-link-wrapper-2">
                             <a
-                              href="#"
+                              href="ComingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 1</a
                             ><a
-                              href="#"
+                              href="ComingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 2</a
                             ><a
-                              href="#"
+                              href="ComingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
                               >Project Details</a
                             ><a
-                              href="#"
+                              href="ComingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
@@ -259,7 +268,7 @@
                         </nav>
                       </div>
                       <a
-                        href="#"
+                        href="ComingSoon.html"
                         class="nav-header-link"
                         style="color: rgb(1, 5, 36)"
                         >Shop</a
@@ -301,37 +310,31 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/about-us"
+                                  href="About Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >About Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/work-process"
+                                  href="Work Process.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Work Process</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                                  href="ComingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Why Choose Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/pricing"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Pricing</a
-                                ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/testimonials"
+                                  href="Testimonials.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Testimonials</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/leadership"
+                                  href="Leadership.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -358,7 +361,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="ComingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -372,7 +375,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="ComingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -383,31 +386,19 @@
                                   </div>
                                 </div>
                                 <a
-                                  href="#"
+                                  href="Contact Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 1</a
+                                  >Contact Us</a
                                 ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 2</a
-                                ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 3</a
-                                ><a
-                                  href="#"
+                                  href="ComingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Projects 1</a
                                 ><a
-                                  href="#"
+                                  href="ComingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -417,7 +408,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="ComingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -431,7 +422,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="ComingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -446,7 +437,7 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="#"
+                                  href="ComingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -456,7 +447,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="ComingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -470,7 +461,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#
+                                        href="ComingSoon.html
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -493,7 +484,7 @@
           </div>
           <div class="buttons-wrap">
             <a
-              href="#"
+              href="ComingSoon.html"
               class="primary-red-button header-button w-button"
               >Contact Us</a
             >
@@ -538,7 +529,7 @@
       <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
     </div>
     <!--add you contect here-->
-        <div class="section banner-our-customers">
+    <div class="section contacts-2-banner">
       <div
         class="base-container w-container"
         style="
@@ -549,201 +540,25 @@
         "
       >
         <div class="container">
-          <div
-            data-w-id="f9fc9221-4e05-fcdc-b81f-5d34a56aad49"
-            style="
-              opacity: 1;
-              transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
-                rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-              transform-style: preserve-3d;
-            "
-            class="main-title-wrapper leadership"
-          >
-            <h6 class="vertical-inscription h6-leadership">Our customers</h6>
-            <h1 class="leadership-title">
-              We build for you, meet our
-              <span class="red-h2-text">valuable customers</span>
-            </h1>
-          </div>
-          <p
-            data-w-id="f9fc9221-4e05-fcdc-b81f-5d34a56aad50"
-            style="
-              opacity: 1;
-              transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
-                rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-              transform-style: preserve-3d;
-            "
-            class="white-description-leadership"
-          >
-            We work closely with clients to gain an understanding of your
-            desires both philoso phical. World class a broad industry start and
-            creativity.
-          </p>
-        </div>
+
+            <h1 class="text-right">Coming Soon</h1>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
       </div>
     </div>
-    <div class="section">
-      <div
-        class="base-container w-container"
-        style="
-          opacity: 1;
-          transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg)
-            rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-          transform-style: preserve-3d;
-        "
-      >
-        <div
-          data-w-id="f574082b-c091-13fb-a1cf-620209ab8014"
-          style="
-            opacity: 1;
-            transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg)
-              rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-            transform-style: preserve-3d;
-          "
-          class="w-layout-grid customers-grid"
-        >
-          <div
-            id="w-node-_51300c2e-83e6-32e9-54fe-8f07fea8a841-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0003.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Azim Tower</div>
-          </div>
-          <div
-            id="w-node-_5b984663-470c-8ae8-a185-62a544ea4667-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0004.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="85%"
-              height="80%"
-            />
-            <div class="customer-title">Simai Shahar</div>
-          </div>
-          <div
-            id="w-node-_7e11a556-8f96-0258-f74f-689feebb309e-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0005.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-               width="95%"
-              height="75%"
-            />
-            <div class="customer-title">Minstry of Water and Energy</div>
-          </div>
-          <div
-            id="w-node-_693ac295-cd6f-4163-fb05-03085a9a4496-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0006.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Kabul Rana Group</div>
-          </div>
-          <div
-            id="w-node-_62f02d50-09e3-398e-7450-93fc8cf378ac-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0007.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">planex</div>
-          </div>
-          <div
-            id="w-node-f4685100-18e5-f485-d85b-a68b9aada7ae-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0008.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Bismil Architectrue & Design</div>
-          </div>
-          <div
-            id="w-node-_01c5faad-2a41-b24c-f6eb-9f168c31dcab-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0009.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">MUDL</div>
-          </div>
-          <div
-            id="w-node-_9cd6c61e-6704-40cd-15fe-6598545e59c1-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0010.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Al Madina architecture</div>
-          </div>
-          <div
-            id="w-node-_1c01eeca-5d9c-cce7-dbaf-54d429515dd3-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0011.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Taksar Tower</div>
-          </div>
-          <div
-            id="w-node-_87468c32-83f5-729b-6140-32c34d9e6392-76961a85"
-            class="customer-wrapper"
-          >
-            <img
-              src="assets/images/Clients/IMG-20250114-WA0013.jpg"
-              loading="lazy"
-              alt=""
-              class=""
-              width="80%"
-              height="80%"
-            />
-            <div class="customer-title">Shir Ali Khan Architectrue</div>
-          </div>
-        </div>
-      </div>
     </div>
     <div class="section-with-blue-background">
       <div
@@ -940,7 +755,7 @@
             class="footer-link-item"
             >Services</a>
           <a
-            href="#"
+            href="ComingSoon.html"
             class="footer-link-item"
             >Projects</a
           >
@@ -956,7 +771,7 @@
           <div class="footer-rights">
             Powered by
             <a
-              href="#"
+              href="ComingSoon.html"
               target="_blank"
               class="footer-copyright-link-item"
               >Smart Tech Code House.</a
