--- a/About Us.html
+++ b/About Us.html
@@ -16,7 +16,7 @@
         outline: none;
       }
     </style>
-    <title>About Us - Ruc One</title>
+    <title>About Us</title>
     <meta content="About Us - Ruc One" property="og:title" />
     <meta content="About Us - Ruc One" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -107,7 +107,7 @@
     <style data-styled="active" data-styled-version="5.3.11"></style>
   </head>
   <body cz-shortcut-listen="true">
-    <div data-animation="over-left" class="navigation-menu-home w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1" style="will-change: background; background-color: rgb(255, 255, 255)">
+<div data-animation="over-left" class="navigation-menu-home w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium" role="banner" data-no-scroll="1" data-duration="400" data-doc-height="1" style="will-change: background; background-color: rgb(255, 255, 255)">
       <div class="nav-container w-container">
         <div class="menu-wrapper">
           <a
@@ -205,7 +205,7 @@
                               ><span class="nav-dropdowm-link-line"> </span>Work
                               Process</a
                             ><a
-                              href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Why
@@ -224,6 +224,15 @@
                               ><span class="nav-dropdowm-link-line"> </span
                               >Clients</a
                             >
+                            
+                            <a
+                              href="Contact Us.html"
+                              class="nav-dropdown-link-item w-dropdown-link"
+                              tabindex="0"
+                              ><span class="nav-dropdowm-link-line"> </span
+                              >Contact Us</a
+                            >
+
                           </div>
                         </nav>
                       </div>
@@ -268,25 +277,25 @@
                         >
                           <div class="nav-dropdown-link-wrapper-2">
                             <a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 1</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 2</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
                               >Project Details</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
@@ -296,7 +305,7 @@
                         </nav>
                       </div>
                       <a
-                        href="#"
+                        href="comingSoon.html"
                         class="nav-header-link"
                         style="color: rgb(1, 5, 36)"
                         >Shop</a
@@ -338,37 +347,31 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/about-us"
+                                  href="About Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >About Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/work-process"
+                                  href="Work Process.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Work Process</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Why Choose Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/pricing"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Pricing</a
-                                ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/testimonials"
+                                  href="Testimonials.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Testimonials</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/leadership"
+                                  href="Leadership.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -395,7 +398,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -409,7 +412,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -420,31 +423,31 @@
                                   </div>
                                 </div>
                                 <a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Contact Us 1</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Contact Us 2</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Contact Us 3</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Projects 1</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -454,7 +457,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -468,7 +471,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -483,7 +486,7 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -493,7 +496,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -507,7 +510,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#
+                                        href="comingSoon.html
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -530,7 +533,7 @@
           </div>
           <div class="buttons-wrap">
             <a
-              href="#"
+              href="comingSoon.html"
               class="primary-red-button header-button w-button"
               >Contact Us</a
             >
@@ -1756,7 +1759,7 @@
           <a href="index.html" class="footer-link-item">Home</a
           ><a href="About Us.html" class="footer-link-item">About Us</a
           ><a href="Our Services.html" class="footer-link-item">Services</a>
-          <a href="#" class="footer-link-item">Projects</a>
+          <a href="comingSoon.html" class="footer-link-item">Projects</a>
         </div>
         <div
           data-w-id="7ce617ec-d939-c9a7-048b-7fd81a04dc4b"
@@ -1766,7 +1769,7 @@
           <div class="footer-copyright">© STCH. All Rights Reserved.</div>
           <div class="footer-rights">
             Powered by
-            <a href="#" target="_blank" class="footer-copyright-link-item"
+            <a href="comingSoon.html" target="_blank" class="footer-copyright-link-item"
               >Smart Tech Code House.</a
             >
           </div>
@@ -1774,13 +1777,13 @@
       </div>
     </div>
     <script
-      src="assets/JS/jquery-3.5.1.min.dc5e7f18c8.js.download"
+      src="assets/JS/jquery-3.5.1.min.dc5e7f18c8.js"
       type="text/javascript"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
-      src="assets/JS/webflow.3fac248ed89ff4dfec0df45d142294f2.js.download"
+      src="assets/JS/webflow.3fac248ed89ff4dfec0df45d142294f2.js"
       type="text/javascript"
     ></script>
     <div></div>
