--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                               ><span class="nav-dropdowm-link-line"> </span>Work
                               Process</a
                             ><a
-                              href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Why
@@ -189,6 +189,15 @@
                               ><span class="nav-dropdowm-link-line"> </span
                               >Clients</a
                             >
+                            
+                            <a
+                              href="Contact Us.html"
+                              class="nav-dropdown-link-item w-dropdown-link"
+                              tabindex="0"
+                              ><span class="nav-dropdowm-link-line"> </span
+                              >Contact Us</a
+                            >
+
                           </div>
                         </nav>
                       </div>
@@ -233,25 +242,25 @@
                         >
                           <div class="nav-dropdown-link-wrapper-2">
                             <a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 1</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 2</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
                               >Project Details</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
@@ -261,7 +270,7 @@
                         </nav>
                       </div>
                       <a
-                        href="#"
+                        href="comingSoon.html"
                         class="nav-header-link"
                         style="color: rgb(1, 5, 36)"
                         >Shop</a
@@ -303,37 +312,31 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/about-us"
+                                  href="About Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >About Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/work-process"
+                                  href="Work Process.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Work Process</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Why Choose Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/pricing"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Pricing</a
-                                ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/testimonials"
+                                  href="Testimonials.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Testimonials</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/leadership"
+                                  href="Leadership.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -360,7 +363,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -374,7 +377,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -385,31 +388,19 @@
                                   </div>
                                 </div>
                                 <a
-                                  href="#"
+                                  href="Contact Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 1</a
+                                  >Contact Us</a
                                 ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 2</a
-                                ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 3</a
-                                ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Projects 1</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -419,7 +410,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -433,7 +424,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -448,7 +439,7 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -458,7 +449,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -472,7 +463,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#
+                                        href="comingSoon.html
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -495,7 +486,7 @@
           </div>
           <div class="buttons-wrap">
             <a
-              href="#"
+              href="comingSoon.html"
               class="primary-red-button header-button w-button"
               >Contact Us</a
             >
@@ -585,14 +576,14 @@
                   rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
                 transform-style: preserve-3d;
               "
-              href="https://ruc-one-wcopilot-template.webflow.io/about-us"
+              href="About Us.html"
               class="primary-red-button w-button"
               >Read More</a
             >
           </div>
           <div class="banner-video">
             <a
-              href="https://ruc-one-wcopilot-template.webflow.io/home-3#"
+              href="https://ruc-one-wcopilot-template.webflow.io/home-3"
               data-w-id="42715028-9615-813a-be52-fb54472711a0"
               style="
                 opacity: 1;
@@ -3601,13 +3592,13 @@
       </div>
     </div>
     <script
-      src="./assets/JS/jquery-3.5.1.min.dc5e7f18c8.js.download"
+      src="./assets/JS/jquery-3.5.1.min.dc5e7f18c8.js"
       type="text/javascript"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
-      src="./assets/JS/webflow.3fac248ed89ff4dfec0df45d142294f2.js.download"
+      src="./assets/JS/webflow.3fac248ed89ff4dfec0df45d142294f2.js"
       type="text/javascript"
     ></script>
     <div></div>
