--- a/layout.html
+++ b/layout.html
@@ -168,7 +168,7 @@
                               ><span class="nav-dropdowm-link-line"> </span>Work
                               Process</a
                             ><a
-                              href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Why
@@ -187,6 +187,15 @@
                               ><span class="nav-dropdowm-link-line"> </span
                               >Clients</a
                             >
+                            
+                            <a
+                              href="Contact Us.html"
+                              class="nav-dropdown-link-item w-dropdown-link"
+                              tabindex="0"
+                              ><span class="nav-dropdowm-link-line"> </span
+                              >Contact Us</a
+                            >
+
                           </div>
                         </nav>
                       </div>
@@ -231,25 +240,25 @@
                         >
                           <div class="nav-dropdown-link-wrapper-2">
                             <a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 1</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span>Our
                               Projects 2</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
                               >Project Details</a
                             ><a
-                              href="#"
+                              href="comingSoon.html"
                               class="nav-dropdown-link-item w-dropdown-link"
                               tabindex="0"
                               ><span class="nav-dropdowm-link-line"> </span
@@ -259,7 +268,7 @@
                         </nav>
                       </div>
                       <a
-                        href="#"
+                        href="comingSoon.html"
                         class="nav-header-link"
                         style="color: rgb(1, 5, 36)"
                         >Shop</a
@@ -301,37 +310,31 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/about-us"
+                                  href="About Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >About Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/work-process"
+                                  href="Work Process.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Work Process</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/why-choose-us"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Why Choose Us</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/pricing"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Pricing</a
-                                ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/testimonials"
+                                  href="Testimonials.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Testimonials</a
                                 ><a
-                                  href="https://ruc-one-wcopilot-template.webflow.io/leadership"
+                                  href="Leadership.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -358,7 +361,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -372,7 +375,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -383,31 +386,19 @@
                                   </div>
                                 </div>
                                 <a
-                                  href="#"
+                                  href="Contact Us.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 1</a
+                                  >Contact Us</a
                                 ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 2</a
-                                ><a
-                                  href="#"
-                                  class="nav-dropdown-link-item w-dropdown-link"
-                                  tabindex="0"
-                                  ><span class="nav-dropdowm-link-line"> </span
-                                  >Contact Us 3</a
-                                ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
                                   >Projects 1</a
                                 ><a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -417,7 +408,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -431,7 +422,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -446,7 +437,7 @@
                             <div class="megamenu-dropdown-wrap">
                               <div class="nav-dropdown-link-wrapper-2">
                                 <a
-                                  href="#"
+                                  href="comingSoon.html"
                                   class="nav-dropdown-link-item w-dropdown-link"
                                   tabindex="0"
                                   ><span class="nav-dropdowm-link-line"> </span
@@ -456,7 +447,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#"
+                                        href="comingSoon.html"
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -470,7 +461,7 @@
                                   <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="w-dyn-item">
                                       <a
-                                        href="#
+                                        href="comingSoon.html
                                         class="nav-dropdown-link-item w-dropdown-link"
                                         tabindex="0"
                                         ><span class="nav-dropdowm-link-line">
@@ -493,7 +484,7 @@
           </div>
           <div class="buttons-wrap">
             <a
-              href="#"
+              href="comingSoon.html"
               class="primary-red-button header-button w-button"
               >Contact Us</a
             >
@@ -734,7 +725,7 @@
             class="footer-link-item"
             >Services</a>
           <a
-            href="#"
+            href="comingSoon.html"
             class="footer-link-item"
             >Projects</a
           >
@@ -750,7 +741,7 @@
           <div class="footer-rights">
             Powered by
             <a
-              href="#"
+              href="comingSoon.html"
               target="_blank"
               class="footer-copyright-link-item"
               >Smart Tech Code House.</a
@@ -760,13 +751,13 @@
       </div>
     </div>
     <script
-      src="./assets/JS/jquery-3.5.1.min.dc5e7f18c8.js.download"
+      src="./assets/JS/jquery-3.5.1.min.dc5e7f18c8.js"
       type="text/javascript"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
-      src="./assets/Js/webflow.3fac248ed89ff4dfec0df45d142294f2.js.download"
+      src="./assets/Js/webflow.3fac248ed89ff4dfec0df45d142294f2.js"
       type="text/javascript"
     ></script>
     <div></div>
